[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-test_tracer_for_pytest_bdd"
description = "A plugin that allows coll test data for use on Test Tracer"
version = "0.3.2"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Gavin Clark", email = "testtracer.io@gmail.com" },
]
maintainers = [
    { name = "Gavin Clark", email = "testtracer.io@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
]
[project.urls]
Repository = "https://github.com/testreporter/test-tracer-for-pytest"
[project.entry-points.pytest11]
test_tracer_for_pytest_bdd = "pytest_test_tracer_for_pytest_bdd.hooks"
